# Voice-chat

./: .gitignore  CMakeLists.txt  README.md
client/: audio_engine.cpp  audio_engine.h  main.cpp  udp_client.cpp  udp_client.h
common/: config.h
custom-vcpkg-root/vcpkg/: compiler-file-hash-cache.json  issue_body.md
custom-vcpkg-root/vcpkg/updates/: 0000000000  0000000001  0000000002  0000000003  0000000004  0000000005  0000000006  0000000007  0000000008  0000000009
custom-vcpkg-root/x64-windows/share/boost-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
custom-vcpkg-root/x64-windows/share/boost-uninstall/: vcpkg.spdx.json  vcpkg_abi_info.txt
custom-vcpkg-root/x64-windows/share/vcpkg-boost/: vcpkg.spdx.json  vcpkg_abi_info.txt
custom-vcpkg-root/x64-windows/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
custom-vcpkg-root/x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
server/: main.cpp  udp_server.cpp  udp_server.h
